tests/invalid/borrow_conflict/field_read_while_mut_borrowed.facet
struct Pair {
  mut x: unrestricted isize,
  y: unrestricted bool
}

fn main() -> unrestricted isize {
  let mut p: unrestricted Pair = Pair { x = 1, y = true };
  let r: affine &mut unrestricted isize = (&mut p.x) in
  p.x
}
